Quicksearch: add new expert search button; fix alignments; no slimscroll
Slimscroll can't cope with window resizes and breaks flex rendering in
IE10, so use the normal browser scrollbar instead.

Ticket: none

--- a/pub/System/FlatSkinPlugin/src/scss/qwiki/_quicksearch.scss
+++ b/pub/System/FlatSkinPlugin/src/scss/qwiki/_quicksearch.scss
@@ -7,6 +7,8 @@
   z-index: 130;
   transform: translate3d( 100%, 0, 0 );
 
+  @include flex-container($direction:column, $align:stretch);
+
   @media #{$mobile-only} {
     top: $qw-top-one-height-mobile;
     height: calc(100% - #{$qw-top-one-height-mobile});
@@ -60,9 +62,6 @@
     &.active {
       display: block;
     }
-  }
-  .results {
-    .qw-total-results {}
   }
 }
 
@@ -154,6 +153,9 @@
   border-top: 1px solid $qw-quicksearch-border-color;
   padding: 0;
   height: 100%;
+  overflow: auto;
+
+  @include flex($grow: 1);
 
   &.searching {
     background-image: url(../assets/quicksearch-spinner.gif);
@@ -163,8 +165,12 @@
 
   .qw-total-results {
     margin: 0;
-    padding: #{$qw-content-padding/2} #{$qw-content-padding};
-    font-size: 0.8rem;
+    padding: 0 rem-calc(10);
+    line-height: $qw-dochead-label-font-size * 2;
+    color: $qw-dochead-label-color;
+    font-size: $qw-dochead-label-font-size;
+    font-weight: $qw-dochead-label-font-weight;
+    text-transform: uppercase;
   }
 
   .qw-search-result {
@@ -176,7 +182,7 @@
     border-radius: 3px;
 
     &:last-child {
-      border-bottom: 1px solid $qw-border-bg;
+      border-bottom: 0px solid $qw-border-bg;
     }
 
     &:hover,
@@ -191,8 +197,9 @@
         display: block;
         color: black;
         font-weight: bold;
-        font-size: 1rem;
-        padding: 5px 0 8px $qw-content-padding;
+        font-size: 0.8rem;
+        line-height: 1.5rem;
+        padding: 0 $qw-content-padding;
 
         &[data-draft="draft"] {
           border-radius: 3px;
@@ -203,7 +210,8 @@
         i {
           display: inline-block;
           float: left;
-          margin-left: -$qw-content-padding+rem-calc(5);
+          margin-left: -$qw-content-padding;
+          font-size: 1.3rem;
         }
       }
 
@@ -211,7 +219,7 @@
         display: block;
         font-size: 0.8rem;
 
-        padding: 5px 0 0 $qw-content-padding;
+        padding: 5px 0 10px $qw-content-padding;
       }
     }
 
@@ -238,15 +246,16 @@
     .preview {
       float: right;
       transition: opacity 0.15s ease-in-out;
+      height: auto;
       opacity: 0;
-      max-height: 33px;
+      font-size: 0.8rem;
       font-style: italic;
       border: solid 5px $qw-button2-bg-color;
       border-top: 0; border-right: 0;
       border-bottom-left-radius: 3px;
       margin-right: rem-calc(-5);
       margin-top: rem-calc(-6);
-      padding-bottom: 7px;
+      padding: 0;
 
       &:hover {
         background: darken($body-bg, 15%);
@@ -254,8 +263,28 @@
 
       .button {
         border-bottom-right-radius: 0;
+        height: 2rem;
+        line-height: 2rem;
+        padding: 0 $qw-content-padding/2; margin: 0;
       }
     }
+  }
+}
+
+.qw-search-expert {
+  display: block;
+  border-top: solid 1px $qw-border-bg;
+  padding: rem-calc(10);
+  width: calc(100% - rem-calc(20));
+
+  @include flex($grow: 0);
+
+  > a {
+    @extend .qw-prio2-btn;
+    display: block;
+    font-size: 0.8rem;
+    font-style: italic;
+    margin: 0;
   }
 }
 
